--- a/data/en/sections/achievements.yaml
+++ b/data/en/sections/achievements.yaml
@@ -57,6 +57,6 @@ achievements:
   summary: 
 - title: Keynote Speaker
   image: /images/sections/achievements/prog.png
-  summary: A session on Importance of programming contests. link: https://www.facebook.com/447593662694887/posts/1172411863546393/
+  summary: 'A session on Importance of programming contests. link: https://www.facebook.com/447593662694887/posts/1172411863546393/'
   
   
