--- a/data/en/sections/research-interests.yaml
+++ b/data/en/sections/research-interests.yaml
@@ -11,7 +11,7 @@ researchContents:
 - content: 
   title: 
   image: "files/research/bot.gif"
-  description: 'I am broadly interested in Data Science and looking for PhD opportunities. In my undergrad, I worked on Time Series Analysis, however currently, I am working on some Machine Learning Related Research Projects. <br /><br />In future, I will love to work on -' 
+  description: 'I am broadly interested in Data Science and Machine Learning. Currently, I am working on some Human Sensing Technology related research projects. <br /><br />In future, I will love to work on -' 
   description2: '* Machine Learning'
   description3: '* Neural Network'
   description4: '* Deep Learning'
