--- a/config.yaml
+++ b/config.yaml
@@ -68,7 +68,7 @@ params:
       enable: true
     # Enable & configure "Notes" features
     Notes:
-      enable: true
+      enable: false
 
 
   # specify whether you want to show Table of Contents in reading page
