--- a/data/en/sections/education.yaml
+++ b/data/en/sections/education.yaml
@@ -30,21 +30,21 @@ degrees:
       url: "https://ieeexplore.ieee.org/document/8631923"
 
 
-# - name: M.Sc. in Computer Science and Engineering
-#   icon: fa-graduation-cap
-#   timeframe: 2020 - Present
-#   institution:
-#     name: Brac University
-#     url: "https://www.bracu.ac.bd/"
-#   grade: #(optional)
-#     show: true
-#     scale: CGPA
-#     achieved: "4 (Thesis Pending)"
-#     outOf: 4
+- name: M.Sc. in Computer Science and Engineering
+  icon: fa-graduation-cap
+  timeframe: 2020 - 2023
+  institution:
+    name: Brac University
+    url: "https://www.bracu.ac.bd/"
+  grade: #(optional)
+    show: true
+    scale: CGPA
+    achieved: "4 
+    outOf: 4
 
-  # extracurricularActivities: #(optional)
-  # extracurricular:
-  #   show: false
+  extracurricularActivities: #(optional)
+  extracurricular:
+    show: false
   
       
 - name: B.Sc. in Computer Science and Engineering
