--- a/data/en/sections/education.yaml
+++ b/data/en/sections/education.yaml
@@ -12,9 +12,26 @@ section:
   # hideTitle: true
 
 degrees:
+- name: Transferred Ph.D in Computer Science
+  icon: fa-microscope
+  timeframe: Fall 2024 - Present
+  institution:
+    name: Arizona State University
+    url: "https://www.asu.edu/"
+  grade: #(optional)
+    show: false
+    scale: CGPA
+    achieved: 3.6
+    outOf: 4
+  publications: #(optional)
+    showPublications: false   #if true, will show this div
+    pubList:
+    - title: Bitcoin Price Forecasting Using Time Series Analysis
+      url: "https://ieeexplore.ieee.org/document/8631923"
+      
 - name: Ph.D in Computer Science
   icon: fa-microscope
-  timeframe: Fall 2022 - Present
+  timeframe: Fall 2022 - Spring 2024
   institution:
     name: Syracuse University
     url: "https://syracuse.edu"
