--- a/data/en/sections/involvements.yaml
+++ b/data/en/sections/involvements.yaml
@@ -11,7 +11,7 @@ section:
 
 # Your accomplishments
 accomplishments:
-- name: BSA-ASU Graduate Secratory
+- name: BSA-ASU Graduate Secretary
   timeline: "December 2024 - December 2025"
   organization:
     name: Bangladesh Student Association, ASU
