--- a/data/en/sections/involvements.yaml
+++ b/data/en/sections/involvements.yaml
@@ -15,6 +15,7 @@ accomplishments:
   timeline: "December 2024 - December 2025"
   organization:
     name: Bangladesh Student Association, ASU
+    url: https://asu.campuslabs.com/engage/organization/bangladesh-students-association-bsa
   courseOverview: "Arranged multiple events under the banner of ASU"
   certificateURL: "https://youtu.be/hepaTcXkZE4?si=_V0MNVuglGXe223r"
   certificateURL2: "https://youtu.be/woFRcAACcdY?si=NeXcGb4GFzGXbpSN"
