--- a/data/en/sections/publications.yaml
+++ b/data/en/sections/publications.yaml
@@ -6,77 +6,57 @@ section:
   showOnNavbar: false
 
 publicationList:
-# - publication:
-#     type: Journal Publications               #Journal or Conference or Book Chapter
-#   entry:
-#     - title: '<text style="color: #aa4e24">Roy, D.</text>, Hasan, T., Hasan, A.T. and Islam, A.S., 2021. A Computational Analysis of Fluid Mixing Characteristics Inside a Microchannel by Pulsating Streams. In <i>Proceedings of 16th Asian Congress of Fluid Mechanics</i> (pp. 185-193). Springer, Singapore.'
-#       url: 10.1007/978-981-15-5183-3_20
-#       abstract:
-#         show: ture
-#         text: 'In a microfluidic channel, mixing becomes troublesome as it is obviously constrained by mass diffusion at low Reynolds number. This work computationally analyzes the use of pulsating streams for possible enhancement of fluid mixing in a microchannel at Reynolds number of 0.2. A simple two-dimensional T-shaped microchannel is considered for this study. Two pulsatile streams are kept out of phase by 90° while the pulsation frequency is kept constant at 7.5 Hz. However, the ratio of pulse amplitude to base velocity has been varied in the range of 5.0–12.5. Moreover, the ratio of pulse amplitudes of two streams has been changed from 1.0 to 2.0. It is observed that an increment of pulse amplitude to base velocity ratio results an increase in the degree of mixing inside the microchannel. In addition, fluctuation characteristics in mixing degree decrease with an increase in pulse amplitude. In case of varied pulse amplitudes of two streams, results showed that the quality of mixing is enhanced by increasing the ratio until 1.7. Finally, the required minimum length of a microchannel for a specific degree of mixing is identified from the results of the present work.'
- 
-#    - title: Paper Title 2
-#      year: 2014
-#      url:
-#      abstract:
-#        show: ture
-#        text: journal paper 2 abstract
-
 - publication:
-
     type: Preprints
   entry:
     - title: '<text style="color: #aa4e24">Roy, S.</text>, Hameed, A., Salekin, A., Sultana, S., & Duan, Y. (2025). Curvature-Aligned Federated Learning: Fairness without Demographics. arXiv preprint arXiv:2501.12345.'
       url: https://arxiv.org/abs/2501.12345
+      citationCount: 0
       abstract:
         show: false
         text: preprint paper abstract
 
-
-    type: Conference Publications               #Journal or Conference or Book Chapter
-  entry:                                       #add - title here
+- publication:
+    type: Peer-Reviewed Publications
+  entry:
     - title: 'Kalanadhabhatta, M.,  <text style="color: #aa4e24">Roy, S.</text>, Grant, T., Salekin, A., Rahman, T., & Bergen-Cico, D. (2023, September). Detecting PTSD Using Neural and Physiological Signals: Recommendations from a Pilot Study. In 2023 11th International Conference on Affective Computing and Intelligent Interaction (ACII) (pp. 1-8). IEEE.'
       url: 10.1109/ACII59096.2023.10388200
+      citationCount: 5
       abstract:
         show: false
         text: journal paper 2 abstract
-    
+
     - title: 'Bismoy, M.I., Shahrear, F., Mitra, A., Bikash, D.M., Afrin, F., <text style="color: #aa4e24">Roy, S.</text> and Arif, H., 2022, November. Image Translation of Bangla and English Sign Language to Written Language using Convolutional Neural Network. In <i>2022 International Conference on Electrical, Computer, Communications and Mechatronics Engineering (ICECCME)</i> (pp. 1-6). IEEE.'
       url: 10.1109/ICECCME55909.2022.9988088
+      citationCount: 3
       abstract:
         show: false
         text: journal paper 2 abstract
 
     - title: 'Al Taawab, A., Rahman, M., Islam, Z., Mustari, N., <text style="color: #aa4e24">Roy, S.</text> and Alam, M.G.R., 2022, October. Detecting Self-Esteem Level and Depressive Indication Due to Different Parenting Style Using Supervised Learning Techniques. In <i>2022 9th International Conference on Behavioural and Social Computing (BESC)</i> (pp. 1-6). IEEE.'
       url: 10.1109/BESC57393.2022.9995147
+      citationCount: 2
       abstract:
         show: false
         text: journal paper 2 abstract
 
-    - title:  '<text style="color: #aa4e24">Roy, S.</text>  and Tahsin, L., 2022. Prediction of COVID-19 Severity Level Using XGBoost Algorithm: A Machine Learning Approach Based on SIR Epidemiological Model. In <i>Intelligent Systems and Sustainable Computing</i> (pp. 69-78). Springer, Singapore.'
+    - title: '<text style="color: #aa4e24">Roy, S.</text> and Tahsin, L., 2022. Prediction of COVID-19 Severity Level Using XGBoost Algorithm: A Machine Learning Approach Based on SIR Epidemiological Model. In <i>Intelligent Systems and Sustainable Computing</i> (pp. 69-78). Springer, Singapore.'
       url: 10.1007/978-981-19-0011-2_7
+      citationCount: 6
       abstract:
         show: false
         text: journal paper 2 abstract
 
     - title: 'Ahmed, S., <text style="color: #aa4e24">Roy, S.</text> and Alam, G.R., 2021, October. Benchmarking and Selecting Optimal Diabetic Retinopathy Detecting Machine Learning Model using Entropy and TOPSIS Method. In <i>2021 International Conference on Electrical, Computer, Communications and Mechatronics Engineering (ICECCME)</i> (pp. 1-6). IEEE.'
       url: 10.1109/ICECCME52200.2021.9591153
+      citationCount: 4
       abstract:
         show: false
         text: journal paper 2 abstract
 
-        
-    - title: ' <text style="color: #aa4e24">Roy, S.</text> , Nanjiba, S., & Chakrabarty, A. (2018, December). Bitcoin price forecasting using time series analysis. In 2018 21st International Conference of Computer and Information Technology (ICCIT) (pp. 1-5). IEEE.'
+    - title: '<text style="color: #aa4e24">Roy, S.</text>, Nanjiba, S., & Chakrabarty, A. (2018, December). Bitcoin price forecasting using time series analysis. In 2018 21st International Conference of Computer and Information Technology (ICCIT) (pp. 1-5). IEEE.'
       url: 10.1109/ICCITECHN.2018.8631923
+      citationCount: 15
       abstract:
         show: false
         text: 'It was my undergraduate thesis project.'
-
-#- publication:
-#    type: Book Chapter               #Journal or Conference or Book Chapter
-#  entry:
-#    - title:  Chapter name
-#      url:
-#      abstract:
-#        show: ture
-#        text: 
