--- a/data/en/author.yaml
+++ b/data/en/author.yaml
@@ -12,6 +12,6 @@ contactInfo:
 
 # some summary about what you do
 summary:
-  - I love teaching
-  - I am interested in Data Science related Research
-  - Programming is my hobby
+  - Passionate about teaching and mentoring students  
+  - Research interests in Federated Learning, Ethical AI, Multimodal Sensing, and Algorithmic Fairness in Human Sensing Technology
+  - Enjoy programming
