--- a/data/en/author.yaml
+++ b/data/en/author.yaml
@@ -12,6 +12,6 @@ contactInfo:
 
 # some summary about what you do
 summary:
-  - Passionate about teaching and mentoring students  
+  - Passionate about teaching 
   - Research interests in Federated Learning, Ethical AI, Multimodal Sensing, and Algorithmic Fairness in Human Sensing Technology
   - Enjoy programming
